# COP4020-llvm-compiler

./: .gitignore  Dockerfile  README.md  compile.sh  cop4020-p5.cabal  install.sh  restart.sh  runtests.sh
src/: Codegen-old.hs  Emit-old.hs  Emit.hs  Lexer.hs  Main.hs  Main3.hs  Main4.hs  Parser.hs  Syntax.hs  defs.c  foo.c
test/: argTypesCorrect.txt  asttest.txt  asttest2.txt  cStateIsSaved.txt  callTree.expected  callTree.txt  canAddConstantAndVar.txt  canAssign.txt  canAssignConstantToVar.txt  canAssignExpr.txt  canAssignResultToVar.txt  canCallSequential.txt  canComment.txt  canUseRVInC.txt  canUseReturnValue.txt  constantArithTestFloat.txt  constantArithTestInt.txt  deeperCallStack.txt  externArgumentsCorrect.txt  externTypesCorrect.txt  nestedFunctionCalls.txt  pow.txt  precedenceTest.expected  precedenceTest.txt  smokeFloat.txt  smokeInt.txt  smoketest.expected  smoketest.txt
